@@ -31,10 +31,14 @@ t/data/tag4.pyx
 t/PYX-SGML-Tags/01-use.t
 t/PYX-SGML-Tags/02-version.t
 t/PYX-SGML-Tags/03-new.t
-t/PYX-SGML-Tags/04-parse_file-char.t
-t/PYX-SGML-Tags/05-parse_file-instruction.t
-t/PYX-SGML-Tags/06-parse_file-comment.t
-t/PYX-SGML-Tags/07-parse_file-tag.t
+t/PYX-SGML-Tags/04-parse-char.t
+t/PYX-SGML-Tags/05-parse-instruction.t
+t/PYX-SGML-Tags/06-parse-comment.t
+t/PYX-SGML-Tags/07-parse-tag.t
+t/PYX-SGML-Tags/08-parse_file-char.t
+t/PYX-SGML-Tags/09-parse_file-instruction.t
+t/PYX-SGML-Tags/10-parse_file-comment.t
+t/PYX-SGML-Tags/11-parse_file-tag.t
 Tags.pm
 xt/PYX-SGML-Tags/01-pod_coverage.t
 xt/PYX-SGML-Tags/02-pod.t
