@@ -1,6 +1,5 @@
 TODO
 ====
-3. Pridat testy pro parse().
 4. Pridat testy pro parse_handler().
 5. Priklad pro finalize().
 6.
@@ -13,3 +12,6 @@ OK [20160216] skim
 1. default hodnota 'tags' by mohla byt but Tags::Output::Raw nebo undef?
 Dal jsem tam Tags::Output::Raw s vystupem na stdout.
 OK [20160217] skim
+
+3. Pridat testy pro parse().
+OK [20191008] skim
